--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir ./dist"
+    "build": "parcel build index.html --dist-dir ./dist",
+    "watch:sass": "node-sass ./src/sass/main.scss ./src/css/style.css -w"
   },
   "author": "Jonas Schedtmann",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.0.0-beta.1",
+    "parcel": "2.0.0-beta.1",
     "sass": "^1.26.10"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "fractional": "^1.0.0",
+    "node-sass": "^5.0.0",
     "regenerator-runtime": "^0.13.7"
   }
 }
